--- a/style.css
+++ b/style.css
@@ -1,11 +1,7 @@
-html,body {
-  margin: 0px;
-  width: 100%;
-  height: 100%;
-}
-
-
 .container {
-  width: 100vw;
-  height: 100vh;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
